apps/obsidian-sync/extras/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: obsydian-sync
spec:
  hostnames:
  - obsydian-sync.camsab.me
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: https-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: couchdb-svc-couchdb
      port: 5984
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
